--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "date-fns": "^2.25.0",
     "framer-motion": "^4.1.17",
     "graphql": "^15.6.0",
-    "next": "11.1.2",
+    "next": "12.2.0",
     "next-auth": "^3.29.0",
     "react": "17.0.2",
     "react-datepicker": "^4.3.0",
@@ -25,9 +25,11 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@types/node": "^18.7.3",
     "@types/react": "17.0.24",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
-    "typescript": "4.4.3"
+    "tsc": "^2.0.4",
+    "typescript": "4.7"
   }
 }
