--- a/package.json
+++ b/package.json
@@ -9,27 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.4.13",
-    "@chakra-ui/react": "^1.6.8",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@types/react-datepicker": "^4.3.0",
-    "date-fns": "^2.25.0",
-    "framer-motion": "^4.1.17",
-    "graphql": "^15.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-datepicker": "^4.8.0",
+    "react-icons": "^4.4.0",
     "next": "12.2.0",
-    "next-auth": "^3.29.0",
-    "react": "17.0.2",
-    "react-datepicker": "^4.3.0",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "next-auth": "^4.10.3",
+    "graphql": "^16.6.0",
+    "@apollo/client": "^3.6.9",
+    "@chakra-ui/react": "^2.2.3",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "framer-motion": "^4.1.17",
+    "date-fns": "^2.29.2"
   },
   "devDependencies": {
-    "@types/node": "^18.7.3",
-    "@types/react": "17.0.24",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
+    "@types/react-datepicker": "^4.4.2",
+    "@types/node": "^18.7.14",
+    "@types/react": "18.0.18",
+    "eslint": "8.23.0",
+    "eslint-config-next": "12.2.5",
+    "jest": "^29.0.2",
     "tsc": "^2.0.4",
-    "typescript": "4.7"
+    "typescript": "^4.8.2"
   }
 }
