--- a/package.json
+++ b/package.json
@@ -6,30 +6,36 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest --watch",
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-datepicker": "^4.8.0",
-    "react-icons": "^4.4.0",
-    "next": "12.2.0",
-    "next-auth": "^4.10.3",
-    "graphql": "^16.6.0",
     "@apollo/client": "^3.6.9",
     "@chakra-ui/react": "^2.2.3",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "date-fns": "^2.29.2",
+    "date-fns-tz": "^1.3.7",
     "framer-motion": "^4.1.17",
-    "date-fns": "^2.29.2"
+    "graphql": "^16.6.0",
+    "next": "12.2.0",
+    "next-auth": "^4.10.3",
+    "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
-    "@types/react-datepicker": "^4.4.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@types/jest": "^29.0.0",
     "@types/node": "^18.7.14",
     "@types/react": "18.0.18",
+    "@types/react-datepicker": "^4.4.2",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "jest": "^29.0.2",
+    "jest-environment-jsdom": "^29.0.2",
     "tsc": "^2.0.4",
     "typescript": "^4.8.2"
   }
