--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.2.3",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@reduxjs/toolkit": "^1.8.6",
     "date-fns": "^2.29.2",
     "date-fns-tz": "^1.3.7",
     "framer-motion": "^4.1.17",
@@ -23,7 +24,8 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
