--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "date-fns-tz": "^1.3.7",
     "framer-motion": "^4.1.17",
     "graphql": "^16.6.0",
-    "next": "12.2.0",
+    "next": "^13.0.5",
     "next-auth": "^4.10.3",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
@@ -35,7 +35,7 @@
     "@types/react": "18.0.18",
     "@types/react-datepicker": "^4.4.2",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5",
+    "eslint-config-next": "^13.0.5",
     "jest": "^29.0.2",
     "jest-environment-jsdom": "^29.0.2",
     "tsc": "^2.0.4",
